--- a/views/back/layout.ejs
+++ b/views/back/layout.ejs
@@ -5,9 +5,9 @@
     <!-- Basic -->
     <meta charset="UTF-8">
 
-    <title>DİNİ AKADEMİ ADMİN PANELİ</title>
-    <meta name="keywords" content="Dini Akademi Admin Paneli" />
-    <meta name="description" content="Dini Akademi Admin Paneli">
+    <title>WEBMASTERADAM EĞİTİM YAZILIMI PANEL</title>
+    <meta name="keywords" content="WEBMASTERADAM EĞİTİM YAZILIMI PANEL" />
+    <meta name="description" content="WEBMASTERADAM EĞİTİM YAZILIMI PANEL">
     <meta name="author" content="webmasteradam.com">
 
     <!-- Mobile Metas -->
