--- a/views/back/layout.ejs
+++ b/views/back/layout.ejs
@@ -133,6 +133,18 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="#">
+                                    <i class="fa fa-th" aria-hidden="true"></i>
+                                    <span>Sınavlar</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-film" aria-hidden="true"></i>
+                                    <span>Canlı Ders</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/admin/blog">
                                     <i class="fa fa-newspaper-o" aria-hidden="true"></i>
                                     <span>Blog Haberleri</span>
@@ -140,26 +152,32 @@
                             </li>
                             <li>
                                 <a href="/admin/basin">
-                                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                                    <i class="fa fa-th-list"></i>
                                     <span>Basında Biz</span>
                                 </a>
                             </li>
                              <li>
                                 <a href="/admin/satis">
-                                    <i class="fa fa-calculator" aria-hidden="true"></i>
+                                    <i class="fa fa-usd"></i>
                                     <span>Satışlar</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="/admin/link">
-                                    <i class="fa fa-calculator" aria-hidden="true"></i>
+                                    <i class="fa fa-free-code-camp"></i>
                                     <span>Ücretsiz Dersler</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="/admin/basvurular">
-                                    <i class="fa fa-calculator" aria-hidden="true"></i>
+                                    <i class="fa fa-table"></i>
                                     <span>Ders Başvuruları</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-star"></i>
+                                    <span>Öğrenci Soruları</span>
                                 </a>
                             </li>
                             <li class="nav-parent">
